# memo-mcp

./: .gitignore  README.md  Taskfile.yml  pyproject.toml
data/index_new/vectors/: simple_store.pkl
data/memo_example/: README.md
data/memo_example/2025/01/: 28.md
data/memo_example/2025/04/: 10.md
data/memo_example/2025/05/: 30.md
data/memo_example/2025/06/: 18.md
data/memo_example/2025/07/: 04.md
data/memo_example/2025/08/: 29.md
data/memo_example/2025/09/: 14.md
data/memo_example/2025/10/: 31.md
data/memo_example/2025/11/: 12.md
data/memo_example/2025/12/: 25.md
memo_mcp/: __init__.py  server.py
memo_mcp/config/: __init__.py  settings.py
memo_mcp/mcp/: server.py  tool_handlers.py
memo_mcp/rag/: __init__.py  app_logging.py  config.py  main.py  memo_rag.py
memo_mcp/rag/config/: rag_config.py
memo_mcp/rag/document/: indexer.py  retriever.py
memo_mcp/rag/utils/: logging_setup.py
memo_mcp/rag/vector/: embeddings.py  vector_store.py
memo_mcp/rag/vector/database/: chromadb.py  faiss.py  qdrant.py  simple.py  vector_backend.py
memo_mcp/rag/vectors/: embeddings.py  vector_store.py
memo_mcp/rag/vectors/database/: chromadb.py  faiss.py  qdrant.py  simple.py  vector_backend.py
memo_mcp/utils/: logging_setup.py
tests/: settings.py
tests/data/memo_example/2025/01/: 15.md
tests/data/memo_example/2025/02/: 08.md
tests/data/memo_example/2025/03/: 05.md  22.md
tests/memo_mcp/: test_config.py
tests/memo_mcp/memo/: test_data_structure.py
